fixing broken style

--- a/huaxia/app/assets/stylesheets/application.css
+++ b/huaxia/app/assets/stylesheets/application.css
@@ -224,11 +224,11 @@ li.none-border{
 }
 
 span.icon-side-menu{
-  width: 35px;
+  width: 40px;
   float: left;
 }
 span.text-side-menu{
-  width: 150px;
+  width: 145px;
   float: left;
   font-size: 16px;
 }
